Update Readme
Added explanation of how to run the app in InteliJ IDEA

Also added an images folder which will contain the images for the readme. For now we use the SDK to run the app. At a later date I will try to make it work by using Maven only.